Add footer update and etc

--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,8 @@
-/* header styles */
+body{
+    background-color: aliceblue;
+} 
+ 
+ /* header styles */
 
 .roboto-normal {
     font-family: "Roboto", sans-serif;
@@ -89,7 +93,7 @@ main {
 }
 
 .action-p {
-    color: #B3B3B3;
+    color: #757575;
     font-size: 24px;
     font-weight: 300;
 }
@@ -138,12 +142,14 @@ main {
 .Users-Feedback-contenar{
     display: flex;
     gap: 20px;
-    margin-top: 60px;
+    margin-top: 50px;
+    
 }
-.oll-review-contant{
+.oll-contant{
     box-shadow: 1px 1px 2px rgb(117, 109, 109);
     border-radius: 14px;
     padding: 30px;
+    background-color: white;
 }
 .Users-Feedback-title{
     text-align: center;
@@ -152,7 +158,7 @@ main {
 }
 .review-data{
     display: flex;
-    gap: 12px;
+    gap: 20px;
     align-items: center;
 }
 .review-data-img{
@@ -180,10 +186,10 @@ height: 40px;
     font-weight: 700;
     font-size: 30px;
 }
-/* focus-better-style */
+        /* focus-better-style */
 
 .focus-better-section{
-    background-color: bisque;
+    background-color: white;
     border-radius: 14px;
     padding-top: 40px;
     padding-bottom: 75px;
@@ -205,10 +211,48 @@ height: 40px;
      
 }
 /* Lets-Get-In-Touch-style */
+
 .Lets-Get-In-Touch-Section{
     display: flex;
 }
 .Lets-Get-In-Touch-title{
     font-size: 97px;
     font-weight: bold;
+}
+
+
+/* footer-section */
+
+footer{
+     background-color: white;
+}
+.footer-section{
+    text-align: center;
+    padding-top: 5px;
+    padding-bottom: 40px;
+    
+}
+.footer-logo{
+    font-size: 100px;
+    font-weight: bold;
+    color: #4E47FF;
+}
+.footer-p{
+    font-size: 20px;
+    font-weight: 400;
+    color: #B3B3B3;
+    
+}
+.a-tag a{
+    text-decoration: none;
+    color: #757575;
+    font-size: 20px;
+}
+.a-tag{
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+}
+.a-tag a:hover{
+    color: #252432;
 }
